@@ -6,6 +6,7 @@
 * Trap invalid dates in metadata.
   Closes bug #323 (Crash when saving with invalid date)
 * Use GTK's FontChooserDialog for selecting font for OCR output in PDF
+* Moved font discovery to program start to accelerate display of save dialog
 
 
 2.5.2 (22.04.2019):
